Update .gitignore to exclude sensitive configuration files
Excluded files (contain RPC passwords):
- SETUP_GUIDE.md: Node setup with credentials
- monitor_sync.sh: Monitoring script with RPC access

These files remain on local dev machine only for security.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ ltc_scrypt.so
 .DS_Store
 .github/
 enable_opnsense_ssh.sh
+# Sensitive configuration files with passwords
+SETUP_GUIDE.md
+monitor_sync.sh
