docs: updated README, installation guide, startup scripts
- Comprehensive INSTALL.md with Ubuntu 24.04 instructions
- Updated README with feature overview and quick start
- install_p2pool_ubuntu_2404.sh automated installer
- start_p2pool.sh with configurable parameters

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ build/
 ltc_scrypt.so
 
 .DS_Store
+.github/
+enable_opnsense_ssh.sh
+block_history.json
+
+# Log files
+log*.txt
+log*.log
+*.log
